# movies-imdb

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
comments/: factories.py  filters.py  managers.py  models.py  serializers.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_created_at.py  0003_auto_20200911_1251.py  0004_auto_20200911_1255.py
comments/tests/: test_views.py
features/: api.feature  environment.py
features/steps/: browser.py
movies/: api.py  conf.py  exceptions.py  factories.py  filters.py  models.py  serializers.py  views.py
movies/migrations/: 0001_initial.py  0002_auto_20200826_2048.py  0003_auto_20200826_2055.py  0004_delete_comment.py
movies/tests/: test_views.py
movies/tests/responses/: a-clockwork-orange.json  a-streetcar-named-desire.json  an-american-in-paris.json  apocalypse-now.json  doctor-zhivago.json  et.json  forrest-gump.json  from-here-to-eternity.json  gladiator.json  god-father.json  home-alone.json  jaws.json  my-fair-lady.json  one-flew-over-the-cuckoos-nest.json  patton.json  psycho.json  pulp-fiction.json  raiders-of-the-lost-ark.json  rocky.json  saving-private-ryan.json  some-like-it-hot.json  terminator.json  the-best-years-of-our-lives.json  the-godfather.json  the-lord-of-the-rings-the-return-of-the-king.json  the-philadelphia-story.json  the-searchers.json  the-shawshank-redemption.json  the-silence-of-the-lambs.json  titanic.json  to-kill-a-mockingbird.json  unforgiven.json
project/: asgi.py  docker.py  local.py  settings.py  test.py  urls.py  wsgi.py
